--- a/examples/install/cluster-controller/04-deployment.yaml
+++ b/examples/install/cluster-controller/04-deployment.yaml
@@ -34,6 +34,13 @@ spec:
               value: strimzi/kafka-connect-s2i:latest
             - name: STRIMZI_DEFAULT_TOPIC_CONTROLLER_IMAGE
               value: strimzi/topic-controller:latest
+          resources:
+            limits:
+              cpu:
+              memory:
+            requests:
+              cpu:
+              memory:
           livenessProbe:
             httpGet:
               path: /healthy
