--- a/systemtest/src/test/resources/log4j2.properties
+++ b/systemtest/src/test/resources/log4j2.properties
@@ -9,3 +9,7 @@ rootLogger.level = ${env:STRIMZI_LOG_LEVEL:-INFO}
 rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.console.ref = STDOUT
 rootLogger.additivity = false
+
+logger.clients.name = org.apache.kafka.clients
+logger.clients.level = info
+
