--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
         <module>crd-annotations</module>
         <module>crd-generator</module>
         <module>api</module>
+        <module>client</module>
         <module>mockkube</module>
         <module>operator-common</module>
         <module>topic-operator</module>
