--- a/install/cluster-operator/047-Crd-kafkaconnector.yaml
+++ b/install/cluster-operator/047-Crd-kafkaconnector.yaml
@@ -1,4 +1,4 @@
-apiVersion: apiextensions.k8s.io/v1alpha1
+apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: kafkaconnectors.kafka.strimzi.io
@@ -9,7 +9,7 @@ spec:
   versions:
   - name: v1alpha1
     served: true
-    storage: false
+    storage: true
   version: v1alpha1
   scope: Namespaced
   names:
