--- a/examples/kafka-connect/kafka-connect.yaml
+++ b/examples/kafka-connect/kafka-connect.yaml
@@ -10,3 +10,7 @@ spec:
     trustedCertificates:
       - secretName: my-cluster-cluster-ca-cert
         certificate: ca.crt
+  connectorSelector:
+    # The connectorSelector identifies KafkaConnectors in the same namespace
+    # which should be created within this connect cluster
+    connect-cluster: my-connect-cluster
