--- a/api/src/test/resources/io/strimzi/api/kafka/model/KafkaConnect.out.yaml
+++ b/api/src/test/resources/io/strimzi/api/kafka/model/KafkaConnect.out.yaml
@@ -5,6 +5,11 @@ metadata:
   name: "test-kafka-connect"
 spec:
   replicas: 6
+  config:
+    name: "bar"
+  connectorSelector:
+    matchLabels:
+      foo: "bar"
   image: "foo"
   tolerations:
   - effect: "NoSchedule"
@@ -18,8 +23,6 @@ spec:
   logging:
     type: "inline"
     loggers: {}
-  config:
-    name: "bar"
   bootstrapServers: "kafka:9092"
   externalConfiguration:
     env:
