--- a/examples/kafka-connect/kafka-connect.yaml
+++ b/examples/kafka-connect/kafka-connect.yaml
@@ -13,4 +13,5 @@ spec:
   connectorSelector:
     # The connectorSelector identifies KafkaConnectors in the same namespace
     # which should be created within this connect cluster
-    connect-cluster: my-connect-cluster
+    matchLabels:
+      connect-cluster: my-connect-cluster
