Changes Config type as Map and improve connector yaml files
Signed-off-by: Pame Plúas <pamepluas@gmail.com>

--- a/api/src/test/resources/io/strimzi/api/kafka/model/KafkaConnector-with-filestream-sink.yaml
+++ b/api/src/test/resources/io/strimzi/api/kafka/model/KafkaConnector-with-filestream-sink.yaml
@@ -8,7 +8,5 @@ spec:
   class: org.apache.kafka.connect.file.FileStreamSinkConnector
   tasksMax: 1
   config:
-    - name: file
-      value: "/tmp/test.sink.txt"
-    - name: topics
-      value: "connect-test"
+    file: "/tmp/test.sink.txt"
+    topics: "connect-test"
