--- a/api/src/test/resources/io/strimzi/api/kafka/model/KafkaConnector-with-filestream-source.yaml
+++ b/api/src/test/resources/io/strimzi/api/kafka/model/KafkaConnector-with-filestream-source.yaml
@@ -6,9 +6,7 @@ metadata:
     connect-cluster: my-connect-cluster
 spec:
   class: org.apache.kafka.connect.file.FileStreamSourceConnector
-  tasksMax: 2
+  tasksMax: 3
   config:
-    - name: file
-      value: "/home/source/test.source.txt"
-    - name: topic
-      value: "test.topic"
+    file: "/home/source/test.source.txt"
+    topic: "test.topic"
