--- a/examples/connector/source-connector.yaml
+++ b/examples/connector/source-connector.yaml
@@ -7,10 +7,6 @@ metadata:
 spec:
   class: org.apache.kafka.connect.file.FileStreamSourceConnector
   tasksMax: 2
-  topics:
-    - "test.topic"
   config:
-    - name: file
-      value: "/opt/kafka/LICENSE"
-    - name: topic
-      value: my-topic
+    file: "/opt/kafka/LICENSE"
+    topic: my-topic
