--- a/install/cluster-operator/050-Deployment-strimzi-cluster-operator.yaml
+++ b/install/cluster-operator/050-Deployment-strimzi-cluster-operator.yaml
@@ -19,7 +19,7 @@ spec:
       serviceAccountName: strimzi-cluster-operator
       containers:
       - name: strimzi-cluster-operator
-        image: strimzi/operator:latest
+        image: tjbentley/operator:latest
         args:
         - /opt/strimzi/bin/cluster_operator_run.sh
         env:
@@ -32,39 +32,39 @@ spec:
         - name: STRIMZI_OPERATION_TIMEOUT_MS
           value: "300000"
         - name: STRIMZI_DEFAULT_ZOOKEEPER_IMAGE
-          value: strimzi/kafka:latest-kafka-2.3.0
+          value: tjbentley/kafka:latest-kafka-2.3.0
         - name: STRIMZI_DEFAULT_TLS_SIDECAR_ENTITY_OPERATOR_IMAGE
-          value: strimzi/kafka:latest-kafka-2.3.0
+          value: tjbentley/kafka:latest-kafka-2.3.0
         - name: STRIMZI_DEFAULT_TLS_SIDECAR_KAFKA_IMAGE
-          value: strimzi/kafka:latest-kafka-2.3.0
+          value: tjbentley/kafka:latest-kafka-2.3.0
         - name: STRIMZI_DEFAULT_TLS_SIDECAR_ZOOKEEPER_IMAGE
-          value: strimzi/kafka:latest-kafka-2.3.0
+          value: tjbentley/kafka:latest-kafka-2.3.0
         - name: STRIMZI_DEFAULT_KAFKA_EXPORTER_IMAGE
-          value: strimzi/kafka:latest-kafka-2.3.0
+          value: tjbentley/kafka:latest-kafka-2.3.0
         - name: STRIMZI_KAFKA_IMAGES
           value: |
-            2.2.1=strimzi/kafka:latest-kafka-2.2.1
-            2.3.0=strimzi/kafka:latest-kafka-2.3.0
+            2.2.1=tjbentley/kafka:latest-kafka-2.2.1
+            2.3.0=tjbentley/kafka:latest-kafka-2.3.0
         - name: STRIMZI_KAFKA_CONNECT_IMAGES
           value: |
-            2.2.1=strimzi/kafka:latest-kafka-2.2.1
-            2.3.0=strimzi/kafka:latest-kafka-2.3.0
+            2.2.1=tjbentley/kafka:latest-kafka-2.2.1
+            2.3.0=tjbentley/kafka:latest-kafka-2.3.0
         - name: STRIMZI_KAFKA_CONNECT_S2I_IMAGES
           value: |
-            2.2.1=strimzi/kafka:latest-kafka-2.2.1
-            2.3.0=strimzi/kafka:latest-kafka-2.3.0
+            2.2.1=tjbentley/kafka:latest-kafka-2.2.1
+            2.3.0=tjbentley/kafka:latest-kafka-2.3.0
         - name: STRIMZI_KAFKA_MIRROR_MAKER_IMAGES
           value: |
-            2.2.1=strimzi/kafka:latest-kafka-2.2.1
-            2.3.0=strimzi/kafka:latest-kafka-2.3.0
+            2.2.1=tjbentley/kafka:latest-kafka-2.2.1
+            2.3.0=tjbentley/kafka:latest-kafka-2.3.0
         - name: STRIMZI_DEFAULT_TOPIC_OPERATOR_IMAGE
-          value: strimzi/operator:latest
+          value: tjbentley/operator:latest
         - name: STRIMZI_DEFAULT_USER_OPERATOR_IMAGE
-          value: strimzi/operator:latest
+          value: tjbentley/operator:latest
         - name: STRIMZI_DEFAULT_KAFKA_INIT_IMAGE
-          value: strimzi/operator:latest
+          value: tjbentley/operator:latest
         - name: STRIMZI_DEFAULT_KAFKA_BRIDGE_IMAGE
-          value: strimzi/kafka-bridge:latest
+          value: tjbentley/kafka-bridge:latest
         - name: STRIMZI_LOG_LEVEL
           value: INFO
         livenessProbe:
