--- a/api/src/main/resources/strimzi-crds.yaml
+++ b/api/src/main/resources/strimzi-crds.yaml
@@ -74,7 +74,7 @@
   singular: kafkatopic
   listKind: KafkaTopicList
   scope: Namespaced
-  statusClass: io.fabric8.kubernetes.api.model.apiextensions.CustomResourceSubresourceStatus
+  #statusClass: io.fabric8.kubernetes.api.model.apiextensions.CustomResourceSubresourceStatus
 - group: kafka.strimzi.io
   crdApiVersion: apiextensions.k8s.io/v1beta1
   version: v1beta1
@@ -84,7 +84,7 @@
   singular: kafkatopic
   listKind: KafkaTopicList
   scope: Namespaced
-  statusClass: io.fabric8.kubernetes.api.model.apiextensions.CustomResourceSubresourceStatus
+  #statusClass: io.fabric8.kubernetes.api.model.apiextensions.CustomResourceSubresourceStatus
 
 # KafkaUser
 - group: kafka.strimzi.io
