--- a/pom.xml
+++ b/pom.xml
@@ -80,13 +80,13 @@
         <okio.version>1.15.0</okio.version>
         <vertx.version>3.8.5</vertx.version>
         <vertx-juni5.version>3.8.5</vertx-juni5.version>
-        <log4j.version>2.13.0</log4j.version>
+        <log4j.version>2.13.1</log4j.version>
         <hamcrest.version>2.2</hamcrest.version>
         <valid4j.version>1.1</valid4j.version>
-        <fasterxml.jackson-core.version>2.10.2</fasterxml.jackson-core.version>
-        <fasterxml.jackson-databind.version>2.10.2</fasterxml.jackson-databind.version>
-        <fasterxml.jackson-dataformat.version>2.10.2</fasterxml.jackson-dataformat.version>
-        <fasterxml.jackson-annotations.version>2.10.2</fasterxml.jackson-annotations.version>
+        <fasterxml.jackson-core.version>2.10.4</fasterxml.jackson-core.version>
+        <fasterxml.jackson-databind.version>2.10.4</fasterxml.jackson-databind.version>
+        <fasterxml.jackson-dataformat.version>2.10.4</fasterxml.jackson-dataformat.version>
+        <fasterxml.jackson-annotations.version>2.10.4</fasterxml.jackson-annotations.version>
         <kafka.version>2.5.0</kafka.version>
         <zkclient.version>0.11</zkclient.version>
         <scala-library.version>2.12.10</scala-library.version>
@@ -94,24 +94,27 @@
         <mockito.version>2.23.4</mockito.version>
         <jsonpath.version>2.4.0</jsonpath.version>
         <slf4j.version>1.7.25</slf4j.version>
-        <quartz.version>2.2.1</quartz.version>
+        <quartz.version>2.3.2</quartz.version>
         <debezium.version>1.1.0.Final</debezium.version>
         <jaeger.version>1.0.0</jaeger.version>
         <opentracing.version>0.33.0</opentracing.version>
         <opentracing-kafka.version>0.1.4</opentracing-kafka.version>
         <strimzi-oauth.version>0.5.0</strimzi-oauth.version>
+        <bouncycastle.version>1.65</bouncycastle.version>
+        <keycloak.version>10.0.1</keycloak.version>
 
         <junit-json-params.version>5.5.1-r0</junit-json-params.version>
         <javax.json-api.version>1.1.4</javax.json-api.version>
         <javax.json.version>1.1.4</javax.json.version>
-        <rest-assured.version>4.1.1</rest-assured.version>
+        <rest-assured.version>4.3.0</rest-assured.version>
         <json-path.version>4.1.1</json-path.version>
         <jupiter.version>5.5.1</jupiter.version>
         <junit.platform.version>1.5.1</junit.platform.version>
         <gson.version>2.8.2</gson.version>
         <vertx.kafka.client>3.7.1</vertx.kafka.client>
-        <netty.version>4.1.45.Final</netty.version>
+        <netty.version>4.1.48.Final</netty.version>
         <micrometer.version>1.3.1</micrometer.version>
+        <commons-codec.version>1.13</commons-codec.version>
     </properties>
 
     <distributionManagement>
@@ -582,6 +585,18 @@
                 <version>${strimzi-oauth.version}</version>
             </dependency>
             <dependency>
+                <!-- transitive dep; override here to avoid buggy version -->
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk15on</artifactId>
+                <version>${bouncycastle.version}</version>
+            </dependency>
+            <dependency>
+                <!-- transitive dep; override here to avoid buggy version -->
+                <groupId>org.keycloak</groupId>
+                <artifactId>keycloak-common</artifactId>
+                <version>${keycloak.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>io.micrometer</groupId>
                 <artifactId>micrometer-core</artifactId>
                 <version>${micrometer.version}</version>
@@ -619,6 +634,20 @@
                 <groupId>io.vertx</groupId>
                 <artifactId>vertx-micrometer-metrics</artifactId>
                 <version>${vertx.version}</version>
+            </dependency>
+            <dependency>
+                <!-- transitive dep; override here to avoid buggy version -->
+                <groupId>io.rest-assured</groupId>
+                <artifactId>rest-assured</artifactId>
+                <version>${rest-assured.version}</version>
+                <scope>compile</scope>
+            </dependency>        
+            <dependency>
+                <!-- transitive dep; override here to avoid buggy version -->
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons-codec.version}</version>
+                <scope>compile</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -879,6 +908,7 @@
                                 <ignoredUnusedDeclaredDependency>org.glassfish:javax.json:jar</ignoredUnusedDeclaredDependency>
                                 <ignoredUnusedDeclaredDependency>org.apache.kafka:kafka_2.12:jar</ignoredUnusedDeclaredDependency>
                                 <ignoredUnusedDeclaredDependency>io.netty:netty-transport-native-epoll:jar</ignoredUnusedDeclaredDependency>
+                                <ignoredUnusedDeclaredDependency>commons-codec:commons-codec</ignoredUnusedDeclaredDependency>
                                 <ignoredDependency>org.junit.platform</ignoredDependency>
                                 <ignoredUnusedDeclaredDependency>org.apache.kafka:connect-file</ignoredUnusedDeclaredDependency>
                                 <ignoredDependency>org.junit.jupiter</ignoredDependency>
